# HWGit

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: masks.py  processing.py  widget.py
src/decorators/: log.py
src/external_api/: converter.py
src/generators/: __init__.py  generators.py
src/utils/: json_reader.py
tests/: test_converter.py  test_generators.py  test_json_reader.py  test_log.py  test_masks.py  test_processing.py  test_widget.py
