[project]
name = "banking-data-processor"
version = "0.1.0"
description = ""
authors = [
    {name = "VladislavaFn",email = "vladislava.fridmann1@aol.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[tool.poetry]
name = "banking-data-processor"
version = "0.1.0"
description = ""
authors = ["VladislavaFn vladislava.fridmann1@aol.com"]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
ignore_missing_imports = true

[tool.isort]
line_length = 119
force_single_line = true

[tool.black]
line-length = 119
exclude = ".git"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"